# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-2.0.46_pre2 (15 Dec 2002): Feature Prerelease: prelink

  15 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge/portage.py:
  Fixups. PRELINK_MASK code. 'prelink -af' in post_emerge().

  15 Dec 2002; Mark Guertin <gerk@gentoo.org> cnf.make.conf.ppc:
  updated incorrect CFLAG option and appended -mabi=altivec info

*portage-2.0.46_pre1 (15 Dec 2002): Feature Prerelease: prelink

  15 Dec 2002; Nicholas Jones <carpaski@gentoo.org> portage.py: Counter
  fixups. Prelink code.

  15 Dec 2002; Nicholas Jones <carpaski@gentoo.org> bin/f*: Made them
  loop over multiple files instead of just doing one.

  13 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge/portage.py:
  Added disabled prelink code. Needs a little more work. Gave portage the
  ability to restart on upgrades to the portage version. Ebuilds for prior
  versions will intentionally die on upgrade. USE=build disables it so
  bootstrap isn't affected.

*portage-2.0.45-r4 (11 Dec 2002): Feature addition: PDEPEND

  11 Dec 2002; Nicholas Jones <carpaski@gentoo.org> ebuild.sh/portage.py:
  Added [CDEPEND, PDEPEND, REBUILD] to auxdbkeys and updated ebuild.sh.
  Prevented autoclean on fetchonly.
	
  11 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
  Added support for PDEPEND. Rewrote some dep handling variables for
  readability and ease of use.

*portage-2.0.45-r3 (09 Dec 2002): Touchups.

  09 Dec 2002; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Fixed
  use_enable() and use_with() so that they actually work -- also don't
  have to specify 2nd parameter, 1st is assumed. 
	
  09 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge: Added previous
  version/downgrade messages to --pretend. Extra message to notify of dep
  calculation failure as bad deps can exit portage without error.

  09 Dec 2002; Nicholas Jones <carpaski@gentoo.org> portage.py: Attempt